--- a/roles/app-nexus/tasks/main.yml
+++ b/roles/app-nexus/tasks/main.yml
@@ -23,13 +23,13 @@
   register: helm_list
 
 - name: Install nexus
-  command: helm install --name nexus stable/sonatype-nexus
+  command: helm install --name nexus --set nexusProxy.env.nexusDockerHost=127.0.0.1 --set nexusProxy.env.nexusHttpHost=127.0.0.1 stable/sonatype-nexus
   become: yes
   when: "'nexus' not in helm_list.stdout"
 
-- name: "Patch Svc"
-  shell: kubectl patch svc nexus-sonatype-nexus --patch "$(cat /tmp/patch.yml)"
-  ignore_errors: True
+#- name: "Patch Svc"
+  #  shell: kubectl patch svc nexus-sonatype-nexus --patch "$(cat /tmp/patch.yml)"
+  #  ignore_errors: True
   
 - name: Svc List
   command: kubectl get svc
