--- a/roles/app-secrets/tasks/create-docker-secret.yml
+++ b/roles/app-secrets/tasks/create-docker-secret.yml
@@ -1,4 +1,4 @@
-- command: "kubectl get secret"
+- command: "kubectl get secret -n {{item.namespace}}"
   register: command_result
 
 - command: "kubectl create secret docker-registry {{item.name}} --docker-server={{item.server}} --docker-username={{item.username}} --docker-password={{item.password}} --docker-email={{item.email}} -n {{item.namespace}}"
