--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -22,7 +22,9 @@
     validate_certs: false
 
 - shell: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-  
+  become: yes
+  become_user: root
+
 - name: Ensure a list of packages installed
   yum:
     name: "{{ packages }}"
