--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -21,7 +21,7 @@
     update_cache: True
     validate_certs: false
 
-- shell: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+- command: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
   become: yes
   become_user: root
 
