--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,3 +6,9 @@ host_key_checking = False
 
 #stdout_callback = debug
 #stderr_callback = debug
+
+[ssh_connection]
+
+ssh_args = -o ControlMaster=auto  -o ControlPersist=60s
+
+pipelining = true
