--- a/roles/tool-helm/tasks/main.yml
+++ b/roles/tool-helm/tasks/main.yml
@@ -49,3 +49,12 @@
   shell: source /root/.bashrc; /root/linux-amd64/helm init
   become: yes
   become_user: root
+
+- name: Execute helm init
+  shell: helm list
+  become: yes
+  become_user: root
+  register: result
+  until: "'Error' not in result.stderr"
+  retries: 20
+  delay: 5
