--- a/roles/app-secrets/tasks/create-secret.yml
+++ b/roles/app-secrets/tasks/create-secret.yml
@@ -2,4 +2,7 @@
     src: secret.yml
     dest: /tmp/secret.yml
 
-- command: "kubectl apply -f /tmp/secret.yml"
+- name: "Create Secret"
+  command: "kubectl apply -f /tmp/secret.yml"
+  become: yes
+  become_user: root
