--- a/roles/config-authorized-keys/tasks/main.yml
+++ b/roles/config-authorized-keys/tasks/main.yml
@@ -1,3 +1,9 @@
+- name: Ensure Folder exists
+  file:
+    path: ~/.ssh/
+    state: directory
+  become: yes
+
 - name: Copy Authorized Keys
   copy:
     content: "{{authorized_keys}}"
