--- a/softwarefactory.yml
+++ b/softwarefactory.yml
@@ -2,58 +2,58 @@
 
 - hosts: all
   roles:
-  - { role: util-crond, tags: [alert, crond] }
+  - { role: util-crond,             tags: [alert, crond] }
   - { role: config-authorized-keys, tags: authorized-keys }
 
 - hosts: nfs-client
   roles:
-  - { role: storage-client-nfs, tags: nfs }
+  - { role: storage-client-nfs,     tags: nfs }
 
 - hosts: kubernetes
   roles:
   - { role: tool-logrotate, tags: [log, kubernetes ] }
-  - { role: network, tags: [network, kubernetes] }
-  - { role: docker, tags:  [docker, kubernetes]}
-  - { role: k8s, tags:  kubernetes }
+  - { role: network,        tags: [network, kubernetes] }
+  - { role: docker,         tags: [docker, kubernetes]}
+  - { role: k8s,            tags: [k8s, kubernetes] }
 
 - hosts: kubernetes-master
   roles:
-  - { role: k8s-master, tags:  [kubernetes, kubernetes-master]}
+  - { role: k8s-master,     tags: [kubernetes, k8s-master]}
 
 - hosts: kubernetes-slave
   roles:
-  - { role: k8s-slave, tags: [kubernetes,kubernetes-slave] }
+  - { role: k8s-slave,      tags: [kubernetes, k8s-slave] }
 
 - hosts: helm
   roles:
-  - { role: tool-helm, tags: [kubernetes,tool-helm] }
+  - { role: tool-helm,      tags: [kubernetes, tool-helm] }
+  - { role: k8s-namespace,  tags: [kubernetes, k8s-namespace] }
+  - { role: app-secrets,    tags: [kubernetes, app-secrets] }
 
 - hosts: cert-manager
   roles:
-  - { role: k8s-namespace,    tags: [kubernetes, k8s-namespace] }
-  - { role: app-secrets,      tags: [kubernetes, app-secrets] }
-  - { role: k8s-cert-manager, tags: [kubernetes, k8s-cert-manager] }
+  - { role: k8s-cert-manager,  tags: [kubernetes, k8s-cert-manager] }
 
 - hosts: ingress
   roles:
-  - { role: k8s-ingress-nginx,    tags: [kubernetes, k8s-ingress-nginx] }
+  - { role: k8s-ingress-nginx, tags: [kubernetes, k8s-ingress-nginx] }
 
 - hosts: monitoring
   roles:
-  - { role: k8s-dashboard, tags: [kubernetes, k8s-dashboard] }
+  - { role: k8s-dashboard,     tags: [kubernetes, k8s-dashboard] }
 
 - hosts: rook
   roles:
-  - { role: storage-rook, tags: storage-rook }
+  - { role: storage-rook,      tags: storage-rook }
 
 - hosts: upgrade
   roles:
-  - { role: util-upgrade, tags: upgrade }
+  - { role: util-upgrade,      tags: upgrade }
 
 - hosts: ping
   roles:
-  - { role: util-ping, tags: ping }
+  - { role: util-ping,         tags: ping }
 
 - hosts: reboot
   roles:
-  - { role: util-reboot, tags: reboot }
+  - { role: util-reboot,       tags: reboot }
