[CT-57] tentative de mise en plac edu restore + clenup

--- a/roles/k8s-backup/tasks/main.yml
+++ b/roles/k8s-backup/tasks/main.yml
@@ -5,19 +5,10 @@
   become: yes
   become_user: root
 
-- name: Copy ca.crt
-  copy:
-    src: /etc/kubernetes/pki/ca.crt
-    dest: /mnt/backup/pki/
-    remote_src: true
-  become: yes
-  become_user: root
-
-- name: Copy ca.key
-  copy:
-    src: /etc/kubernetes/pki/ca.key
-    dest: /mnt/backup/pki/
-    remote_src: true
+- synchronize:
+    src: /etc/kubernetes/pki
+    dest: /mnt/backup/
+  delegate_to: "{{ inventory_hostname }}"
   become: yes
   become_user: root
 
@@ -28,21 +19,9 @@
   become: yes
   become_user: root
 
-- name: Check cronjob backup
-  command: kubectl get cronjob backup -n kube-system
+- name: Create Backup
+  k8s:
+    state: present
+    src: /tmp/backup.yaml
   become: yes
   become_user: root
-  register: cronjob_check
-  ignore_errors: True
-
-- name: Update backup config
-  command: kubectl apply -f /tmp/backup.yaml
-  become: yes
-  become_user: root
-  when: "'backup' in cronjob_check.stdout"
-
-- name: Create backup config
-  command: kubectl create -f /tmp/backup.yaml
-  become: yes
-  become_user: root
-  when: "'backup' not in cronjob_check.stdout"
