--- a/roles/app-secrets/tasks/create-secret.yml
+++ b/roles/app-secrets/tasks/create-secret.yml
@@ -2,7 +2,9 @@
     src: secret.yml
     dest: /tmp/secret.yml
 
-- name: "Create Secret"
-  command: "kubectl apply -f /tmp/secret.yml"
+- name: Create Secret
+  k8s:
+    state: present
+    src: /tmp/secret.yml
   become: yes
   become_user: root
