--- a/roles/k8s-cert-manager/tasks/create-certificate.yml
+++ b/roles/k8s-cert-manager/tasks/create-certificate.yml
@@ -3,20 +3,11 @@
     src: issuer.yaml
     dest:  /tmp/issuer.yaml
 
-- name: Check
-  command: "kubectl get issuer --namespace {{namespace_item}}"
-  become: yes
-  become_user: root
-  register: issuer_check
-
-- name: Delete Issuer
-  command: "kubectl delete issuer letsencrypt-issuer --namespace {{namespace_item}}"
-  become: yes
-  become_user: root
-  when: "'letsencrypt-issuer' in issuer_check.stdout"
-
 - name: Create Issuer
-  command: "kubectl apply -f  /tmp/issuer.yaml --namespace {{namespace_item}}"
+  k8s:
+    state: present
+    src: /tmp/issuer.yaml
+    namespace: "{{namespace_item}}"
   become: yes
   become_user: root
 
@@ -25,19 +16,10 @@
     src: certificate.yaml
     dest:  /tmp/certificate.yaml
 
-- name: Check
-  command: "kubectl get certificate --namespace {{namespace_item}}"
-  become: yes
-  become_user: root
-  register: certificate_check
-
-- name: Delete Certificate
-  command: "kubectl delete certificate certificate --namespace {{namespace_item}}"
-  become: yes
-  become_user: root
-  when: "'certificate' in certificate_check.stdout"
-
 - name: Create Certificate
-  command: "kubectl apply -f  /tmp/certificate.yaml --namespace {{namespace_item}}"
+  k8s:
+    state: present
+    src: /tmp/certificate.yaml
+    namespace: "{{namespace_item}}"
   become: yes
   become_user: root
