--- a/roles/k8s-master/tasks/main.yml
+++ b/roles/k8s-master/tasks/main.yml
@@ -1,14 +1,7 @@
-- name: Execute kubeadm init
-  command: kubeadm init {{kubeadm.init.options | default('')}}
-  register: kubeadm_init_message
-  become: yes
-  become_user: root
-
-- name: "Create join master fact"
-  set_fact:
-     join_master: "{{kubeadm_init_message.stdout_lines[-1]}}"
-  become: yes
-  become_user: root
+- name: Remove folder /var/lib/etcd
+  file:
+    path: /var/lib/etcd
+    state: absent
 
 - name: Delete .kube folder
   file:
@@ -21,6 +14,18 @@
   file:
     path: ~/.kube
     state: directory
+  become: yes
+  become_user: root
+
+- name: Execute kubeadm init
+  command: kubeadm init {{kubeadm.init.options | default('')}}
+  register: kubeadm_init_message
+  become: yes
+  become_user: root
+
+- name: "Create join master fact"
+  set_fact:
+    join_master: "{{kubeadm_init_message.stdout_lines[-1]}}"
   become: yes
   become_user: root
 
