[CT-57] fin mise en place du restore

--- a/roles/app-secrets/tasks/create-secret.yml
+++ b/roles/app-secrets/tasks/create-secret.yml
@@ -1,10 +1,11 @@
-- template:
+- name: "Create Secret"
+  template:
     src: secret.yml
-    dest: /tmp/secret.yml
+    dest: /tmp/app-secret.yml
 
 - name: Create Secret
   k8s:
     state: present
-    src: /tmp/secret.yml
+    src: /tmp/app-secret.yml
   become: yes
   become_user: root
