--- a/roles/tools-common/tasks/main.yml
+++ b/roles/tools-common/tasks/main.yml
@@ -6,18 +6,9 @@
   become: yes
   become_user: root
 
-- name: Ensure rsync is installed
-  yum:
-    name: rsync
-    state: present
-    update_cache: True
-  become: yes
-  become_user: root
-
 - name: "Install pip"
   pip:
     name: pip
-    version: latest
     version: 9.0.3
   become: yes
   become_user: root
@@ -33,5 +24,26 @@
   pip:
     name: openshift
     version: latest
+  become: yes
+  become_user: root
+  
+- name: Ensure rsync is installed
+  yum:
+    name: rsync
+    state: present
+    update_cache: True
+  become: yes
+  become_user: root
+
+- name: Ensure a list of packages are installed
+  yum:
+    name: "{{ packages }}"
+    state: present
+    update_cache: True
+    validate_certs: false
+  vars:
+    packages:
+      - ipvsadm
+      - yum-utils
   become: yes
   become_user: root
