--- a/roles/app-secrets/tasks/create-docker-secret.yml
+++ b/roles/app-secrets/tasks/create-docker-secret.yml
@@ -1,9 +1,11 @@
-- command: "kubectl get secret -n {{ item.namespace }}"
+- name: Get Secret
+  command: "kubectl get secret -n {{ item.namespace }}"
   register: command_result
   become: yes
   become_user: root
 
-- command: "kubectl create secret docker-registry {{ item.name }} --docker-server={{ item.server }} --docker-username={{ item.username }} --docker-password={{ item.password }} --docker-email={{ item.email }} -n {{ item.namespace }}"
+- name: Create Secret if not exists
+  command: "kubectl create secret docker-registry {{ item.name }} --docker-server={{ item.server }} --docker-username={{ item.username }} --docker-password={{ item.password }} --docker-email={{ item.email }} -n {{ item.namespace }}"
   when: 'item.name not in command_result.stdout'
   become: yes
   become_user: root
