--- a/roles/tool-helm/tasks/main.yml
+++ b/roles/tool-helm/tasks/main.yml
@@ -11,7 +11,7 @@
     dest: /root
   become: yes
   become_user: root
-  when: helm_status.stat.exists == False
+  when: not helm_status.stat.exists
 
 - name: Extract helm-v2.12.1-linux-amd64.tar.gz into /root
   unarchive:
@@ -21,23 +21,15 @@
   become: yes
   become_user: root
 
-- name: List clusterrolebinding
-  command: kubectl get clusterrolebinding
-  become: yes
-  become_user: root
-  register: clusterrolebinding_check
+- name: Create cluster role binding for cluster-admin namespace default
+  k8s:
+    state: present
+    definition: "{{ lookup('file', 'cluster-role-binding-admin.yaml') }}"
 
-- name: Create Role Binding
-  command: kubectl create clusterrolebinding add-on-cluster-admin --clusterrole=cluster-admin --serviceaccount=kube-system:default
-  become: yes
-  become_user: root
-  when: "'add-on-cluster-admin' not in clusterrolebinding_check.stdout"
-
-- name: Create Role Binding
-  command: kubectl create clusterrolebinding add-on-cluster-helm --clusterrole=cluster-admin --serviceaccount=default:default
-  become: yes
-  become_user: root
-  when: "'add-on-cluster-helm' not in clusterrolebinding_check.stdout"
+- name: Create cluster role binding for cluster-admin namespace helm
+  k8s:
+    state: present
+    definition: "{{ lookup('file', 'cluster-role-binding-helm.yaml') }}"
 
 - name: Execute helm reset
   command: helm reset
